# vinter-challenge

./: .env.example  .gitignore  README.md  backtest_result.py  backtester.py  binance_data_provider.py  config.py  daily_data_feed.py  data_provider.py  fractional_commission_info.py  main.py  pyproject.toml  run.sh  strategies.py  utils.py
reports/: .gitignore
